fix table collapse

--- a/css/style.css
+++ b/css/style.css
@@ -73,21 +73,22 @@ body {
 	font-weight: 400;
 	width: 700px;
 	padding: 0;
-	height: 0;
+	height: 10px;
 	margin-top: 20px;
 	display: none;
-	border: 3px solid #e88177;
 	background-color: transparent;
+	border: 4px solid #e88177;
+	border-collapse:collapse;
 
+}
+
+input:focus, textarea:focus {
+    outline: none;
 }
 
 .alert-error {
 	background-color: transparent;
 	border-color: transparent;
-}
-
-hr {
-	border-color: #C7D9C9;
 }
 
 .table th, .table td {
@@ -101,6 +102,9 @@ td {
 	font-size: 1.5em; 
 	border: 4px solid #e88177;
 	color: #e88177;
+	padding: 0;
+	margin: 0;
+	height: 55px;
 }
 
 .table-striped tbody > tr:nth-child(odd) > td, .table-striped tbody > tr:nth-child(odd) > th {
@@ -109,4 +113,5 @@ td {
 
 .table-striped tbody > tr:nth-child(even) > td, .table-striped tbody > tr:nth-child(even) > th {
 	background-color: #ecd4d4;
+
 }
